discussion/kv_engine/176193/176193_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51606: Notify PDM of last consistent point on transition

To ensure that we can ack any seqno that a previous active node may
have processed but was not yet satisfied (i.e. persisted). This fixes
the following scenario:

1) vBucket was active
2) vBucket starts sync write requiring persistence (seqno 1)
3) vBucket set to dead
4) vBucket persists sync write from step 3
5) vBucket set to replica
6) vBucket connects to new active and sends no seqno ack

Change-Id: I07ab6a4df25ce4994ab93ca19135e7495354d697

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-15 14:12:30.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-15 14:12:54.000000000
Message: 
Patch Set 8: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/302905/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-15 15:13:36.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/262/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.cc:22:16: error: no member named "getVBucket" in "DurabilityMonitor" [clang-diagnostic-error]
    : vb(oldDM.getVBucket()),
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:33: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    VBucket& getVBucket() const override {
                                ^~~~~~~~~

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/262/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.cc:22:16:
error: no member named "getVBucket" in "DurabilityMonitor" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/262/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/258/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:33:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/258/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/355/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\durability\dead_durability_monitor.h(63): error C3668: "DeadDurabilityMonitor::getVBucket": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/355/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/270/ : FAILURE

Compile error at [2022-06-15T15:10:13.876Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:14:
error: ?VBucket& DeadDurabilityMonitor::getVBucket() const? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/270/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/266/ : FAILURE

Compile error at [2022-06-15T15:12:49.851Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:33:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/266/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/269/ : FAILURE

Compile error at [2022-06-15T15:12:38.159Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:33:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/269/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/279/ : FAILURE

Compile error at [2022-06-15T15:11:35.689Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:14:
error: ?VBucket& DeadDurabilityMonitor::getVBucket() const? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/279/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/262/ : FAILURE

Compile error at [2022-06-15T15:10:39.347Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:33:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/262/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/258/ : FAILURE

Compile error at [2022-06-15T14:16:48.479Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:14:
error: ?VBucket& DeadDurabilityMonitor::getVBucket() const? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/258/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/374/ : FAILURE

Compile error at [2022-06-15T14:15:28.517Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:63:33:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/374/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17228/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
